--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.0",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-pager-view": "^6.2.3",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
