scanner in android

--- a/ios/Whosin/Info.plist
+++ b/ios/Whosin/Info.plist
@@ -47,6 +47,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>whosin need to access camara for th qrScanner</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Black.ttf</string>
