--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-camera": "^4.2.1",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-pager-view": "^6.2.3",
     "react-native-permissions": "^4.1.0",
     "react-native-qrcode-scanner": "^1.5.5",
@@ -27,10 +27,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.1.0",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
