scanner in progress

--- a/ios/Whosin/Info.plist
+++ b/ios/Whosin/Info.plist
@@ -49,6 +49,8 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
 	<string>whosin need to access camara for th qrScanner</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>whosin need to access the photo library</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Black.ttf</string>
