--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-camera": "^4.2.1",
     "react-native-image-crop-picker": "^0.40.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.2.3",
-    "react-native-permissions": "^4.1.0",
+    "react-native-permissions": "^3.10.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.8.2",
