--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vision-camera": "^3.8.2",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
