--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.3",
     "react-native-permissions": "^3.10.1",
     "react-native-qrcode-scanner": "^1.5.5",
@@ -34,7 +35,8 @@
     "react-native-vision-camera": "^3.8.2",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "rn-qr-generator": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
